# pyrsync2

./: README.md  pyproject.toml  setup.py
pyrsync2/: __init__.py  pyrsync2.py
tests/: test_package.py
