[tool.poetry]
name = "pyrsync2"
version = "0.2.6"
description = "A Python 3 module which implements rsync binary diff algorithm."
license = "['MIT']"
authors = ['Georgy Angelov', 'Eric Pruitt', 'Isis Lovecruft']
readme = "README.md"
repository = "https://github.com/stormbreakerbg/pyrsync"
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Archiving :: Compression",
]

[tool.poetry.dependencies]
python = ">=3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
